mockup/css/style.css
@import url(http://fonts.googleapis.com/css?family=Noto+Sans);

body {
  font-family: "Source Han Sans TC", "Noto Sans", Helvetica, Arial, sans-serif;
  background: rgb;
  margin: 0px;
  padding: 0px;
  text-rendering: optimizeLegibility;
  min-width: 320px;
  background: rgb(236,236,236);
  color: rgb(55,53,54);
  font-size: 16px;
  
}
a {
  text-decoration: none;
  /* color: rgb(0,191,198); */
}
@media screen and (min-width: 1000px){
  .wrapper{
     width: 1000px;
  }
  .nav{
    max-width:1000px;
    margin:0 auto;
  }
}
@media screen and (max-width: 1000px){
  .nav{
     width: 100%;
  }
}
@media (max-width: 400px){
  .wrapper{
     width: 100%;
  }
  .nav{
     width: 100%;
  }
}
.page_wrapper {
  height: 100%;
}
.wrapper {
  padding-top: 15px;
  margin-left: auto;
  margin-right: auto;
  padding:8px;
  box-sizing: border-box;
  position: relative;

  /* background: rgb(236,236,236);*/
}
#content {
	margin-top: 50px;
  min-height: 600px;
  
}
#content--crowdfunding {
  width: 100%;
  overflow: hidden;

}
hr {
  border: 0;
  height: 1px;
  background: rgb(220,220,220);
}
.highlight {
  font-weight: bold;
  text-decoration: underline;
}
.l_center {
  text-align: center;
}

/* ------------------------------------------------------------ */
/* Navigation
/* ------------------------------------------------------------ */

header {
  z-index: 100;
  height: 50px;
  width: 100%;
  position: fixed;
  top: 0px;
  box-sizing: border-box;
  padding: 10px;
  background: rgb(220, 220, 220);
  text-align: center;

}
.nav_background {
  background: #3F51B5; 
  color: white;

}

/* ------------------------------------------------------------ */
/* List Item
/* ------------------------------------------------------------ */
.q_title{
  display: inline-block;
  width: 100%;
  text-align: left;
  padding: 3px 0px;
  font-size: 26px;
  font-weight: 700;
  height: auto;
  border-bottom: 1px solid rgb(220,220,220);

}
.q_item {
  box-shadow: 0 1px 2px rgba(0,0,0,.2);
  margin-bottom: 1px;

  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;

  padding: 10px;
  width: 100%;
  position: relative;
  background: white;
}

.q_content {
  margin-top: 50px; /* for fixed nav */
  text-align: left;
  padding: 5px 10px;
}

/* ------------------------------------------------------------ */
/* Button
/* ------------------------------------------------------------ */

a.button {
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  background: #26A69A;
  border-radius: 2px;
  box-shadow: 0 2px 2px rgba(0,0,0,.2);
  color: #fff;
  display: inline-block;
  font-size: 13px;
  text-decoration: none;
  text-transform: uppercase;
  padding: 7px 14px;
  cursor: pointer;
  min-width: 70px;
  text-align: center;
}
a.button--square {
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  background: #26A69A;
  border-radius: 2px;
  box-shadow: 0 2px 2px rgba(0,0,0,.2);
  color: #fff;
  display: inline-block;
  font-size: 13px;
  text-decoration: none;
  text-transform: uppercase;
  padding: 10px 10px;
  box-sizing: border-box;
  cursor: pointer;
  min-width: 40px;
  min-height: 40px;
  text-align: center;

}
a.button.unsign {
  /* background: #db4437; */
  min-width: 83px;
}
a.button.facebook{
  background: #0277BD;
}
a.button--square.inactive, a.button--wide.inactive{
  color: rgb(53,55,54);
  background: #009688;
  color: white;
  
}
a.button.goodrating{
  background: #8BC34A;
}
a.button--wide {
  background: white;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  color: rgb(53,55,54);
  display: inline-block;
  font-size: 13px;
  text-decoration: none;
  padding: 4px 10px;
  box-sizing: border-box;
  cursor: pointer;
  text-align: center;
  border-radius: 5px;


}

/* question bottom "more" function */
.question_bottom {
  text-align: center;
  margin: 20px auto;
}
.question_bottom a.button {
  color: #424242;
  background: white;
  width: 100px;
}


/* ------------------------------------------------------------ */
/* sidebar
/* ------------------------------------------------------------ */

#sidebar-shadow {
  background: rgba(0,0,0,0.5);
  height: 100%;
  width: 100%;
  z-index: 100;
  overflow: hidden;
  position: absolute;
  left:0px;
  top: 50px;
 
}
#sidebar-container {
  z-index: 400;
  padding-right: 50px;
  box-sizing: border-box;
  height: 100%;

  top: 0px;
  left: -100%;
  overflow: scroll;
  position: absolute;
  text-align: center;

  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;
  
}
.sidebar-container_left {
  background: white;
  height: 100%;
}
#sidebar-container.show{
  top: 0px;
  height: 100%;
  width: 100%;
  left: 0px;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;
}
@media screen and (min-width: 600px){
  #sidebar-container {
    top: 50px;
    z-index: 30;
    box-shadow: 0 0 6px rgba(0,0,0,.16),0 6px 12px rgba(0,0,0,.32);
    padding-right: 0px;
  }
  #sidebar-container.show{
    width: 250px;
    top: 50px;
  }
  #sidebar-shadow {
    display: none;
  }
}
#focus-discussion{
  z-index: 500;
  background: white;
  position: absolute;
  text-align: center;
 
  top:0px;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;
  overflow: scroll;
  height: 100%;
  width: 100%;
  right: -100%;
  background: rgb(247,247,247);

}

#focus-discussion.show{
  top: 0px;
  height: 100%;
  overflow: scroll;
  right: 0px;
  
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;

}
.q_content_nav {
  width: 100%;
  height: 50px;
  background: #C51162;
  color: white;
}
/* ... */

